[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/CollisionShapes/Player/PlayerCollisionDebug.tres" type="Shape2D" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scenes/CollisionBoxes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Characters/Enemy/monster.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Util/CharacterMover.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/CollisionBoxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Utils/healthManager.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "BASE"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/Collider:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/Collider:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 24 )

[node name="Zombie" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 66
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.352941, 0, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource( 1 )

[node name="HealthManager" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="Collider" parent="HurtBox" index="0"]
shape = ExtResource( 1 )

[node name="CharacterMover" parent="." instance=ExtResource( 5 )]
speed = 250.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BASE = SubResource( 1 )
anims/attack = SubResource( 2 )

[node name="Arm" type="Position2D" parent="."]
position = Vector2( 24, 16 )

[node name="TempArm" type="Sprite" parent="Arm"]
position = Vector2( 16, 0 )
scale = Vector2( 0.565281, 0.0707419 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
position = Vector2( 48, 0 )
collision_mask = 4

[node name="Collider" parent="Hitbox" index="0"]
shape = SubResource( 3 )
disabled = true
[connection signal="hit" from="HurtBox" to="." method="_on_HurtBox_hit"]

[editable path="HurtBox"]

[editable path="Hitbox"]
